# mdmcp

./: .env.example  .gitignore  README.md  install.ps1  install.py  install.sh  pyproject.toml
src/mdmcp/: __init__.py  api_client.py  auth.py  cli_auth.py  cli_install.py  gateway.py  server.py
src/mdymcp/: cli_install.py  cli_uninstall.py
