[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mdmcp"
version = "0.1.0"
description = "Unified MCP server for Mingdao — v1 collaboration API + HAP gateway (worksheets, records, apps)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
mdmcp = "mdmcp.server:main"
mdmcp-auth = "mdmcp.cli_auth:main"

[tool.setuptools.packages.find]
where = ["src"]
